@@ -1,5 +1,9 @@
 2005-02-26  Rodney Dawes  <dobey@novell.com>
 
+	* *.[ch]: Update Copyright to include current year
+
+2005-02-26  Rodney Dawes  <dobey@novell.com>
+
 	* gnome-wp-capplet.c (gnome_wp_add_image): If the filename is not
 	encoded in UTF-8, we just ignore it for now to avoid crashing
 
